# pba_hw

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  readme.md  vcpkg.json
HW1/: CMakeLists.txt
HW1/resource/shader/: floor_shader.fs  floor_shader.vs  model_loading.fs
HW1/src/: main.cpp  mesh.h  model.h
HW2/: CMakeLists.txt
HW2/analysis/: create_graph.py
HW2/analysis/h=0.01/: explicit_euler.csv  implicit_euler.csv
HW2/analysis/h=0.02/: implicit_euler.csv  symplectic_euler.csv
HW2/analysis/h=0.03/: explicit_euler.csv
HW2/analysis/h=0.05/: explicit_euler.csv  implicit_euler.csv
HW2/analysis/h=0.06/: explicit_euler.csv  implicit_euler.csv
HW2/analysis/h=0.08/: explicit_euler.csv  implicit_euler.csv  symplectic_euler.csv
HW2/shader/: texture.vs
HW2/src/: ceiling.cpp  ceiling.h  common.cpp  common.h  context.cpp  context.h  main.cpp  mass.cpp  mass.h  object.cpp  object.h  program.cpp  vertex_layout.cpp
HW3/: CMakeLists.txt
HW3/src/: context.cpp  context.h  main.cpp
HW4/: CMakeLists.txt
HW4/shader/: lighting.vs
HW4/src/: AABB.cpp  AABB.h  common.cpp  common.h  context.cpp  context.h  line.cpp  line.h  main.cpp  model.cpp  sphere.cpp  sphere.h
HW5/: CMakeLists.txt  README.md
HW5/include/Mathematics/: Mesh.h  Vector.h
HW5/shader/: line.fs
HW5/src/: PolyhedralMassProperties.h  RigidBody.h  RigidPlane.cpp  RigidPlane.h  RigidSphere.cpp  RigidSphere.h  contact.h  context.cpp  context.h  demo.cpp  image.cpp  line.cpp  main.cpp  plane.cpp  plane.h  sphere.cpp  sphere.h
HW6/: CMakeLists.txt  discussion.md
HW6/src/: AABB.h  common.cpp  common.h  context.cpp  context.h  line.h  main.cpp  plane.h  sphere.cpp  sphere.h
analysis/h=0.01/: symplectic_euler.csv
analysis/h=0.03/: implicit_euler.csv  symplectic_euler.csv
analysis/h=0.04/: explicit_euler.csv  implicit_euler.csv  symplectic_euler.csv
analysis/h=0.05/: symplectic_euler.csv
analysis/h=0.06/: symplectic_euler.csv
analysis/h=0.07/: explicit_euler.csv  implicit_euler.csv  symplectic_euler.csv
executable/: cmake_install.cmake
executable/HW5/: cmake_install.cmake  imgui.ini
executable/HW6/: cmake_install.cmake  imgui.ini
object_example/: CMakeLists.txt
object_example/src/: common.cpp  context.cpp  main.cpp
